packages/coln-compiler/test/golden/mathieu.output
-- elaborated


-- messages

error[E0000]: Unexpected character '\'
29 |     (a = b) \/ (b = c) \/ (a = c) \/ (a = d) \/ (b = d) \/ (c = d) \/ (
29 |             ^

error[E0000]: Unexpected character '\'
29 |     (a = b) \/ (b = c) \/ (a = c) \/ (a = d) \/ (b = d) \/ (c = d) \/ (
29 |                        ^

error[E0000]: Unexpected character '\'
29 |     (a = b) \/ (b = c) \/ (a = c) \/ (a = d) \/ (b = d) \/ (c = d) \/ (
29 |                                   ^

error[E0000]: Unexpected character '\'
29 |     (a = b) \/ (b = c) \/ (a = c) \/ (a = d) \/ (b = d) \/ (c = d) \/ (
29 |                                              ^

error[E0000]: Unexpected character '\'
29 |     (a = b) \/ (b = c) \/ (a = c) \/ (a = d) \/ (b = d) \/ (c = d) \/ (
29 |                                                         ^

error[E0000]: Unexpected character '\'
29 |     (a = b) \/ (b = c) \/ (a = c) \/ (a = d) \/ (b = d) \/ (c = d) \/ (
29 |                                                                    ^

error[E0000]: Unexpected character '\'
30 |       (q0 (make_quad a b c d) = a) /\ 
30 |                                     ^

error[E0000]: Unexpected character '\'
31 |       (q1 (make_quad a b c d) = b) /\ 
31 |                                     ^

error[E0000]: Unexpected character '\'
32 |       (q2 (make_quad a b c d) = c) /\
32 |                                     ^

error[E0000]: Unexpected character '\'
41 |     (act q base0 = q0 q) /\
41 |                           ^

error[E0000]: Unexpected character '\'
42 |     (act q base1 = q1 q) /\
42 |                           ^

error[E0000]: Unexpected character '\'
43 |     (act q base2 = q2 q) /\
43 |                           ^

error[E0102]: Incompatible precedences
48 |   ax/act_mul : (q : Quad) -> (r : Quad) -> p : Point -> act (mul q r) p = act q (act r p)
48 |                                              ^

error[E0200]: unexpected notation for expression: Infix
29 |     (a = b) \/ (b = c) \/ (a = c) \/ (a = d) \/ (b = d) \/ (c = d) \/ (
29 |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
30 |       (q0 (make_quad a b c d) = a) /\ 
30 | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
31 |       (q1 (make_quad a b c d) = b) /\ 
31 | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
32 |       (q2 (make_quad a b c d) = c) /\
32 | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
33 |       (q3 (make_quad a b c d) = d)
33 | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
